force-app/main/default/objects/FF_Annual_Review__c/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Review</label>
    <referenceTo>OW_review__c</referenceTo>
    <relationshipName>FF_Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>