force-app/main/default/objects/FF_Annual_Review__c/fields/Anything_else_we_should_know__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_we_should_know__c</fullName>
    <label>Anything else we should know ahead of AR</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>