force-app/main/default/objects/FF_Annual_Review__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <description>Determines who this was deleted by, so we can differentiate between client and internal changes.</description>
    <label>Deleted by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FF_Deleted_By</valueSetName>
    </valueSet>
</CustomField>