force-app/main/default/objects/FF_Annual_Review__c/fields/Expected_changes_to_profile_short_term__c.field-meta.xml
<CustomField>
    <fullName>Expected_changes_to_profile_short_term__c</fullName>
    <label>Expected changes to profile (short term)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>