force-app/main/default/objects/FF_Annual_Review__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FF session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Annual Review Questions</relationshipLabel>
    <relationshipName>FF_Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>