force-app/main/default/objects/FF_Annual_Review__c/fields/ff_session_external_id__c.field-meta.xml
<CustomField>
    <fullName>ff_session_external_id__c</fullName>
    <externalId>true</externalId>
    <label>FF session external ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>