force-app/main/default/objects/FF_Annual_Review__c/fields/Lifeline_Scenarios_to_Model__c.field-meta.xml
<CustomField>
    <fullName>Lifeline_Scenarios_to_Model__c</fullName>
    <label>Lifeline scenarios to model</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>