force-app/main/default/objects/FF_Annual_Review__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>