force-app/main/default/objects/FF_Annual_Review__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <label>Validation status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FF_Validation</valueSetName>
    </valueSet>
</CustomField>